added tracking code

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,5 +31,12 @@
             <button type="submit" class="btn btn-dark" id="submit">Submit</button>
         </div>
     </form>
+
+
+      <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/9059838.js"></script>
+<!-- End of HubSpot Embed Code -->
   </body>
+
+
 </html>
